@@ -15,7 +15,6 @@ t/05-image_optimizer-new.t
 t/10-image_optimizer-run.t
 t/15-image_optimizer-_optimize_png.t
 t/16-image_optimizer-_optimize_jpg.t
-t/images/.DS_Store
 t/images/1247136.gif
 t/images/1247136.jpg
 t/images/1367364.gif
