@@ -14,18 +14,19 @@ WriteMakefile(
         : () ),
     PL_FILES  => {},
     PREREQ_PM => {
-        'App::PNGCrush'  => 0.001,
-        'File::Basename' => 0,
-        'File::Copy'     => 0,
-        'File::Path'     => 0,
-        'File::Temp'     => 0,
-        'File::Type'     => 0.22,
-        'File::stat'     => 0,
-        'Git::Wrapper'   => 0.006,
-        'Moose'          => 1.09,
-        'Moose'          => 1.09,
-        'Test::More'     => 0,
-        'Try::Tiny'      => 0,
+        'App::PNGCrush'    => 0.001,
+        'File::Basename'   => 0,
+        'File::Copy'       => 0,
+        'File::Path'       => 0,
+        'File::Temp'       => 0,
+        'File::Type'       => 0.22,
+        'File::stat'       => 0,
+        'Git::Wrapper'     => 0.006,
+        'Graphics::Magick' => 0,
+        'Moose'            => 1.09,
+        'Moose'            => 1.09,
+        'Test::More'       => 0,
+        'Try::Tiny'        => 0,
     },
     dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean => { FILES    => 'Image-Optimizer-*' },
