@@ -20,42 +20,47 @@ has 'path' => (
     required => 1,
     trigger  => sub {
         my ( $self, $value ) = @_;
-        die "No such image ($value)."
-            if !-f $value;
+        die "No such image ($value)." if !-f $value;
+        $self->type;
+        $self->_basename;
+        $self->_dirname;
+        $self->_size;
     }
 );
 
 has 'type' => (
-    is      => 'ro',
-    isa     => 'Str',
-    lazy    => 1,
-    default => sub {
-        my $f = File::Type->new()
-            or return;
-        my $t = $f->checktype_filename( $_[0]->path );
-        return $t;
+    is       => 'ro',
+    isa      => 'Str',
+    required => 1,
+    lazy     => 1,
+    default  => sub {
+        my $f = File::Type->new() or return;
+        return $f->checktype_filename( $_[0]->path );
     },
 );
 
 has '_basename' => (
-    is      => 'ro',
-    isa     => 'Str',
-    lazy    => 1,
-    default => sub { return basename( $_[0]->path ); },
+    is       => 'ro',
+    isa      => 'Str',
+    required => 1,
+    lazy     => 1,
+    default  => sub { return basename( $_[0]->path ); },
 );
 
 has '_dirname' => (
-    is      => 'ro',
-    isa     => 'Str',
-    lazy    => 1,
-    default => sub { return dirname( $_[0]->path ); },
+    is       => 'ro',
+    isa      => 'Str',
+    required => 1,
+    lazy     => 1,
+    default  => sub { return dirname( $_[0]->path ); },
 );
 
 has '_size' => (
-    is      => 'ro',
-    isa     => 'Int',
-    lazy    => 1,
-    default => sub { return ( stat( $_[0]->path ) )->size; }
+    is       => 'ro',
+    isa      => 'Int',
+    required => 1,
+    lazy     => 1,
+    default  => sub { return ( stat( $_[0]->path ) )->size; }
 );
 
 sub destroy {
