@@ -1,3 +1,10 @@
+commit: 892ad4cd1bf56f2d2e1b44f089d1d85c15d3b028
+Author: Tue Aug 3 15:09:12 2010 +0200
+  Date: Otávio Fernandes <otaviof@gmail.com>
+
+	Changes file will be dynamic generated by Makefile.PL and 'git log' command.
+
+
 commit: af405980437d8993284cd74b9036f36bcbdc89b2
 Author: Tue Aug 3 15:01:35 2010 +0200
   Date: Otávio Fernandes <otaviof@gmail.com>
